# Kairix

./: .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  basic.md  check_riscv.c  check_sizes  check_sizes.c  check_sizes_default  check_sizes_native  check_sizes_time64  check_sizes_time64.c  check_stat_default.c  check_stat_time64.c  dev-env-info.md  iozone.md  libctest.md  libctest_patch.patch  lmbench_testcode.md  netperf_testcode.sh  rust-toolchain.toml  verify_fail.c
.devcontainer/: devcontainer.json
docs/: basic.md  iozone.md  lmbench_testcode.md  readme.md  todo.md
docs/ltp/: ltp_fs_signal_plan.md  ltp_menu.md  ltp_rank.md  ltp_todo_fs.md
iperf/: build.sh  iperf_testcode.sh
iperf/src/: cjson.c
libc-bench/: libc-bench  pthread.c
libc-test/src/regression/: tls_get_new-dtv.c
ltp/: access01.rs  access03.c  access04.c  close_range02.c  mount01.c  mount02.c  mount03.c  mount03_suid_child.c
lwext4_rust/: build.rs
lwext4_rust/c/lwext4/include/: ext4_config.h
lwext4_rust/c/lwext4/src/: ext4.c  ext4_xattr.c
lwext4_rust/examples/src/boot/: lang_items.rs
lwext4_rust/src/: bindings.rs  blockdev.rs  file.rs  lib.rs
netperf-2.7.0/: AUTHORS  Makefile  config.h  config.h.in  config.status  configure  configure.ac
netperf-2.7.0/autom4te.cache/: output.0  output.1  requests  traces.0
netperf-2.7.0/doc/: Makefile
netperf-2.7.0/doc/examples/: Makefile
netperf-2.7.0/src/: Makefile  netperf  netserver  netserver.c  nettest_bsd.c  nettest_omni.c
netperf-2.7.0/src/.deps/: dscp.Po  net_uuid.Po  netcpu_procstat.Po  netlib.Po  netperf.Po  netserver.Po  netsh.Po  nettest_bsd.Po  nettest_dlpi.Po  nettest_omni.Po  nettest_sctp.Po  nettest_sdp.Po  nettest_unix.Po  nettest_xti.Po
netperf-2.7.0/src/missing/: Makefile
netperf-2.7.0/src/missing/m4/: Makefile
os/: Cargo.toml  Makefile  build.rs  deps.txt  qemu-net.pcap
os/.cargo/: config.toml
os/rustls/: Cargo.toml
os/rustls-ring/: Cargo.toml
os/rustls/src/: compress.rs  lib.rs  lock.rs  std.rs  ticketer.rs  time_provider.rs  vecbuf.rs
os/rustls/src/client/: connection.rs
os/rustls/src/conn/: mod.rs
os/rustls/src/crypto/: mod.rs
os/rustls/src/error/: mod.rs
os/rustls/src/msgs/deframer/: buffers.rs  mod.rs
os/rustls/src/server/: connection.rs
os/src/: config.rs  console.rs  embedded.rs  entry.asm  error.rs  lang_items.rs  linker-loongarch64-2k1000.ld  linker-loongarch64.ld  linker-qemu.ld  linker-riscv64.ld  logging.rs  main.rs  sbi.rs  sbi_la.rs  timer.rs
os/src/arch/: loongarch64.rs  mod.rs  riscv.rs
os/src/arch/loongarch_dir/: entry.rs  mod.rs
os/src/arch/riscv/: entry.rs  mod.rs
os/src/arch/riscv_dir/: entry.rs  mod.rs
os/src/boards/: qemu.rs
os/src/devices/: mod.rs
os/src/drivers/block/: mod.rs  pci.rs  probe.rs  virtio_blk.rs
os/src/fs/: cgroup.rs  config.rs  disk.rs  ext4fs.rs  file_handle.rs  inode.rs  mod.rs  osinode.rs  pidfd.rs  pipe.rs  readme.md  stdio.rs  superblock.rs  writeback.rs
os/src/fs/cgroup2/: dentry.rs  file.rs  fstype.rs  inode.rs  mod.rs
os/src/fs/devfs/: cpu_dma_latency.rs  fstype.rs  host.rs  loopx.rs  mod.rs  null.rs  rtc.rs  superblock.rs  tty.rs  urandom.rs  zero.rs
os/src/fs/etc/: adjtime.rs  group.rs  host.rs  hosts.rs  localtime.rs  mod.rs  passwd.rs
os/src/fs/fat32/: dentry.rs  file.rs  fstype.rs  inode.rs  io.rs  mod.rs  mount.rs  superblock.rs
os/src/fs/fat32/fat/: dir.rs
os/src/fs/lwext4/: dentry.rs  disk.rs  ext4fs.rs  file.rs  fstype.rs  inode.rs  mod.rs  mount.rs  osinode.rs  superblock.rs
os/src/fs/lwext4/ext4/: dir.rs  file.rs  mod.rs
os/src/fs/notify/: fanotify.rs  inotify.rs  mod.rs
os/src/fs/page/: mod.rs  pagecache.rs
os/src/fs/procfs/: cgroups.rs  config.rs  core_pattern.rs  fanotify.rs  fd.rs  fstype.rs  inotify.rs  io.rs  maps.rs  meminfo.rs  mod.rs  mounts.rs  net_ipv4_conf.rs  pagemap.rs  pid_dir.rs  pid_max.rs  pid_stat.rs  pipe_max_size.rs  self_dir.rs  smaps.rs  status.rs  superblock.rs  tainted.rs  version.rs  vm.rs
os/src/fs/sysfs/: mod.rs  sysfs_block.rs  sysfs_ksm.rs
os/src/fs/tempfs/: dentry.rs  file.rs  fstype.rs  inode.rs  mod.rs  superblock.rs
os/src/fs/tmpfs/: dentry.rs  file.rs  fstype.rs  inode.rs  mod.rs  superblock.rs
os/src/fs/vfs/: cwd.rs  dcache.rs  dentry.rs  file.rs  fstype.rs  inode.rs  kstat.rs  mod.rs  mount.rs  path.rs  readme.md  superblock.rs  vfs_ops.rs
os/src/mm/: address.rs  exception.rs  frame_allocator.rs  heap.rs  heap_allocator.rs  ksm.rs  memory_set.rs  mod.rs  page_table.rs  reclaim.rs  swap.rs  vm_area.rs  vm_set.rs
os/src/net/: arp.rs  device.rs  dns.rs  ethernet.rs  icmp.rs  ip.rs  loopback.rs  mod.rs  neighbor.rs  route.rs  skb.rs  tcp.rs  udp.rs
os/src/net/virtio/: config.rs  device.rs  mod.rs  pci.rs  probe.rs  virtqueue.rs
os/src/net/virtio/mmio/: mod.rs
os/src/net/virtio/pci/: mod.rs
os/src/socket/: mod.rs  raw.rs  tcp.rs  udp.rs
os/src/sync/: mod.rs  mutex.rs  up.rs
os/src/sync/mutex/: mod.rs  remutex.rs  sleep_mutex.rs  spin_mutex.rs
os/src/syscall/: fanotify.rs  fs.rs  futex.rs  info.rs  inotify.rs  landlock.rs  ltp_exec_filter.rs  misc.rs  mm.rs  mod.rs  net.rs  pipe.rs  process.rs  shm.rs  signal.rs  thread.rs  time.rs  tls.rs
os/src/syscall/signal/: loongarch64.rs  mod.rs  riscv64.rs
os/src/task/: id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  signal.rs  task.rs
os/src/task_async/: context_async.rs  manager_async.rs  mod.rs  pid_async.rs  processor_async.rs  task_async.rs
os/src/tls/: mod.rs
os/src/trap/: context.rs  mod.rs  trap.S
patches/cty/: Cargo.toml
patches/cty/src/: lib.rs
polyhal/polyhal-boot/src/arch/: loongarch64.rs  mod.rs  riscv64.rs
polyhal/polyhal-trap/src/trap/: loongarch64.rs  mod.rs  riscv64.rs
polyhal/polyhal/src/: lib.rs  mem.rs
polyhal/polyhal/src/utils/: addr.rs
tools/: build-mkfs.sh  cargo-config-os.toml  cargo-config-user.toml  install-mkfs-ext.sh  mke2fs.conf  nettest-la.sh  nettest-rv.sh  patch-loongarch-musl-sched.py  setup-sdcard-libs.sh
tools/mkfs-riscv64/sbin/: mkfs.ext2  mkfs.fat
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: lib.rs  syscall.rs
(+18 files in other folders)
