[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.11.0"
bitflags = "2.11.0"
xmas-elf = "0.10.0"
virtio-drivers = { version = "0.7" }
lwext4_rust = { path = "../lwext4_rust" }
log = "0.4"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "rwlock",
] }

[profile.release]
debug = true
