[package]
name = "os"
version = "0.1.0"
authors = ["Kairix"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.11.0"
bitflags = "2.11.0"
xmas-elf = "0.10.0"
virtio-drivers = { version = "0.7" }
lwext4_rust = { path = "../lwext4_rust" }
fatfs = { path = "vendor/fatfs", default-features = false, features = [
# fatfs = { git = "https://github.com/rafalh/rust-fatfs", branch = "master", default-features = false, features = [
    "alloc",
    "lfn",
    "unicode",
] }
log = "0.4"
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "rwlock",
] }
flat_device_tree = "3.1.1"

polyhal = { path = "../polyhal/polyhal", features = [
    "trap",
    "boot",
], default-features = false }
polyhal-trap = { path = "../polyhal/polyhal-trap", default-features = false }
polyhal-boot = { path = "../polyhal/polyhal-boot", default-features = false }
# cty = { git = "https://github.com/rust-lang/cty", branch = "master" }


[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { path = "vendor/riscv-0.6.0", features = ["inline-asm"] }
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"

# [target.'cfg(target_arch = "loongarch64")'.dependencies]
# loongArch64 = "0.2.4"
# ns16550a = "0.5.0"


[profile.release]
debug = true

[patch.crates-io]
polyhal = { path = "../polyhal/polyhal" }
polyhal-trap = { path = "../polyhal/polyhal-trap" }
polyhal-boot = { path = "../polyhal/polyhal-boot" }
cty = { path = "../patches/cty" }
