[package]
name = "user_lib"
version = "0.1.0"
authors = ["Chen Yan <1748323932@qq.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.11.0"
bitflags = "2.11.0"

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []