[package]
name = "rustls-ring"
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR ISC OR MIT"
description = "A *ring*-based crypto provider for rustls."
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false

[features]
default = ["std"]
std = []

[dependencies]
pki-types = { package = "rustls-pki-types", version = "1.14", features = ["alloc"] }
rustls = { path = "../rustls", version = "0.24.0-dev.0", default-features = false }
ring = { version = "0.17", features = ["less-safe-getrandom-custom-or-rdrand"] }
subtle = { version = "2.5.0", default-features = false }

[dev-dependencies]
bencher = "0.1.5"
rustls-test = { path = "../rustls-test", default-features = false }

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
